--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "jose2": "npm:jose@^2.0.4",
     "lowdb": "^1.0.0",
     "mongodb": "^3.6.9",
