--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
-    "jose2": "npm:jose@^2.0.4",
-    "lowdb": "^1.0.0",
+    "jose2": "npm:jose@2.0.3",
     "mongodb": "^3.6.9",
-    "mongoose": "^5.13.0",
     "nanoid": "^3.1.23",
     "oidc-provider": "^7.4.1"
   },
